2007-06-25  Martin Hunt  <hunt@redhat.com>

	* systemtap.maps/pmap_agg_overflow.exp: Rewrite
	so order of error messages is not important.

2007-06-22  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.syscall/readwrite.c: Tweak for new default string truncation width.

2007-06-21  David Smith  <dsmith@redhat.com>

	* Makefile.in: Regenerated with automake 1.10.
	* aclocal.m4: Regenerated with aclocal 1.10.
	* configure: Regenerated.

2007-06-20  Martin Hunt  <hunt@redhat.com>

	* systemtap.string/dot.exp: New test.
	* systemtap.string/sprint.exp: New test.

	* systemtap.samples/transport*: Removed.
	
2007-06-20  Martin Hunt  <hunt@redhat.com>
	
	* systemtap.printf/*b.exp: Add code to look in the
	toplevel directory for stap_merge.

2007-06-18  Martin Hunt  <hunt@redhat.com>
	 From Quentin Barnes.
	* lib/stap_run.exp, lib/stap_run2.exp, lib/systemtap.exp,
	systemtap.base/cache.exp, systemtap.base/optim.exp,
	systemtap.base/overload.exp, systemtap.base/prologues.exp,
	systemtap.maps/absentstats.exp, systemtap.maps/foreach_fail.exp,
	systemtap.maps/ix_clear*.exp, systemtap.maps/pmap_agg_overflow.exp,
	systemtap.samples/args.exp, systemtap.samples/arith.exp,
	systemtap.samples/arith_limits.exp, 
	systemtap.samples/control_limits.exp, systemtap.samples/lket.exp,
	systemtap.samples/pfaults.exp, systemtap.samples/poll_map.exp,
	systemtap.samples/primes.exp, systemtap.samples/profile.exp,
	systemtap.samples/queue_demo.exp, systemtap.samples/symbols.exp,
	systemtap.samples/syscalls1.exp, systemtap.samples/syscalls2.exp,
	systemtap.samples/transport.exp: Small fixes to patterns, plus
	fix timeouts for slower systems.

2007-06-15  Frank Ch. Eigler  <fche@elastic.org>

	* lib/systemtap.exp (stap_run_batch): Detect crashing stap and
	represent this as failing return code.

2007-06-14  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/syscalls.stp: Use printf
	for output to avoid problems with long paths.

	 From Quentin Barnes.