@@ -1,0 +1,24 @@
+function print_all_trace_info() {
+	printf("backtrace from %s:\n", pp())
+        print_backtrace()
+        print("--------\n")
+	bt = backtrace()
+	printf("the stack is %s\n", bt)
+        print("--------\n")
+	print_stack(bt);
+        print("--------\n")
+}
+
+probe begin {
+	print_backtrace()
+}
+
+probe end {
+	print_backtrace()
+}
+
+probe module("systemtap_test_module2").function("yyy_func3") {
+	print_all_trace_info()
+}
+
+
