@@ -1,0 +1,8 @@
+obj-m := systemtap_test_module1.o
+KDIR := /lib/modules/$(shell uname -r)/build
+PWD := $(shell pwd)
+default:
+	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
+clean:
+	rm -f *.mod.c systemtap_test_module1.ko *.o .*.cmd Modules.symvers
+	rm -rf .tmp_versions
