@@ -1,3 +1,7 @@
+2007-07-02  Martin Hunt  <hunt@redhat.com>
+
+	* systemtap.context/*: New context tests.
+
 2007-06-25  Martin Hunt  <hunt@redhat.com>
 
 	* systemtap.maps/pmap_agg_overflow.exp: Rewrite
